<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rcpt</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_listing">ListingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
 	<string name="some_text">
  		Patient Listing
 	</string>
 	<string name="some_hint">
  		Type here to filter&#8230;
 	</string>
 	<string name="menu_button">Click</string>
 	<string name="sort">Sort</string>
 	<string name="search">Search</string>
 	<string name="loading">Loading&#8230;</string>
 	<string name="OK">OK</string>
 	<string name="Cancel">Cancel</string>
 	<string name="add_button">Add</string>
	<string name="settings_button">Settings</string>
</resources>
